getAllBuildings endpoint and Swagger documentation. New guidelines for error handline. close driver on app exit
